plugins {
	id 'java'
    id 'application'
	id 'org.springframework.boot' version '3.5.6'
	id 'io.spring.dependency-management' version '1.1.7'
}

group = 'net.iotku'
version = '0.0.1-SNAPSHOT'
description = 'Discord Subsonic Bot'

java {
	toolchain {
		languageVersion = JavaLanguageVersion.of(21)
	}
}

repositories {
	mavenCentral()
	maven { url "https://jitpack.io" } // For com.github.walkyst.JAADec-fork:jaadec-ext-aac & ibxm-fork:com.github.walkyst:ibxm-fork
}

dependencies {
    // Updated implementations of sub-dependencies for security fixes
    // ensure these are kept up to date or otherwise still needed (e.g. main dependency hasn't updated it)
    implementation 'com.google.protobuf:protobuf-java:3.25.8' // Dependency of discord4j-voice:3.2.9

    // Main dependencies
    implementation 'org.springframework.boot:spring-boot-starter-web'
    implementation "me.paulschwarz:spring-dotenv:4.0.0"
	implementation "com.discord4j:discord4j-core:3.2.9"
	implementation 'dev.arbjerg:lavaplayer:2.2.4'
	implementation 'net.beardbot:subsonic-client:0.6.0'

    // JAXB for net.beardbot:subsonic-client
	implementation 'javax.xml.bind:jaxb-api:2.3.1'
	implementation 'org.glassfish.jaxb:jaxb-runtime:2.3.1'
	implementation 'javax.activation:activation:1.1'

    // Testing Dependencies
	testImplementation 'org.springframework.boot:spring-boot-starter-test'
	testRuntimeOnly 'org.junit.platform:junit-platform-launcher'
}

tasks.named('test') {
	useJUnitPlatform()
}

application {
    mainClass = 'net.iotku.subdonic.SubdonicApplication'
}